name:                teleport
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jaredramirez/teleport#readme
license:             BSD3
license-file:        LICENSE
author:              Jared Ramirez
maintainer:          jaredramirez@me.com
copyright:           2018 Jared Ramirez
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable teleport
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , optparse-applicative
                     , aeson
                     , ansi-terminal
                     , system-filepath
  other-modules:       Paths_teleport
